# meteo

./: AGENT.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
src/: api.rs  color.rs  config.rs  display.rs  fake_data.rs  geocode.rs  graph.rs  http.rs  main.rs  weather.rs
