[package]
name = "meteo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meteo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
chrono = "0.4"
dirs  = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
